[tool.poetry]
name = "epfl-enac-deploy-action"
version = "0.1.0"
description = "EPFL ENAC-IT Continuous Deployment"
authors = ["Samuel Bancal <Samuel.Bancal@epfl.ch>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "epfl_enac_deploy_action"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.30.0"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
